<resources>
    <string name="app_name">NewsApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="new_york_time">New York Time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newyorktime">NewYorkTime</string>
    <string name="foxnews">foxnews</string>
    <string name="aajtak">AajTak</string>
    <string name="abpnews">ABPNews</string>
    <string name="dainikjagran">DainikJagran</string>
    <string name="divyabhaskar">DivyaBhaskar</string>
    <string name="timesofindia">TimesOfIndia</string>


</resources>