<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view" >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ajtak"
            android:title="@string/aajtak"
            android:menuCategory="secondary"
            />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/abp"
            android:title="@string/abpnews"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/dainikjagran"
            android:title="@string/dainikjagran"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/FoxNews"
            android:icon="@drawable/divybhaskar"
            android:title="@string/divyabhaskar"
            android:menuCategory="secondary"/>
        <item
            android:id="@+id/SkyNews"
            android:icon="@drawable/timesofindia"
            android:title="@string/timesofindia"
            android:menuCategory="secondary"/>
    </group>

    <item android:title="UP Coming"
        android:menuCategory="secondary">

        <menu>

            <item
                android:id="@+id/nyt"
                android:icon="@drawable/facee"
                android:title="@string/newyorktime"
                android:menuCategory="secondary"/>


        </menu>

    </item>
</menu>